--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
         <div class="footer">
             <p>
-                김미수 디자이너<br><span>Tell. 010 - 9248 - 4806 &nbsp|&nbsp E-mail. psaiidfl_15@naver.com</span><br> 부산 해운대구 좌동 장산역 부근 거주
+                김미수 디자이너<br><span>Tell_010 - 9248 - 4806 &nbsp|&nbsp E-mail_psaiidfl_15@naver.com</span><br> 부산 해운대구 좌동 장산역 부근 거주
             </p>
         </div>
 
