--- a/index.html
+++ b/index.html
@@ -57,32 +57,32 @@
                         <div class="img-box">
                             <div class="hover_area">
                                 <div class="area_none">
-                                    <a href="page/uiux_ccei.html"><span>View</span></a>
+                                    <a href="page/uiux_hotissue.html"><span>View</span></a>
                                 </div>
                             </div>
                             <img src="img/uiux/uiux_img1.jpg">
                             <div class="label">Web</div>
                         </div>
                         <div class="text">
-                            <h2>CCEI</h2>
-                            <p>유아부터 어른들을 위한 맞춤식 화상 영어회화 교육 웹페이지입니다. 커리큘럼 정보와 영어 레벨 테스트 상담 신청을 제공합니다.</p>
+                            <h2>Hot!issue</h2>
+                            <p>지역 뉴스 커뮤니티 앱 입니다.</p>
                         </div>
                     </div>
                     <div class="item">
                         <div class="img-box">
                             <div class="hover_area">
                                 <div class="area_none">
-                                    <a href="page/uiux_sunway.html"><span>View</span></a>
+                                    <a href="page/uiux_gemstone.html"><span>View</span></a>
                                 </div>
                             </div>
-                            <img src="img/uiux/uiux_img2.gif">
-                            <div class="label">Web</div>
+                            <img src="img/uiux/uiux_Re_img2.jpg">
+                            <div class="label">Game</div>
                         </div>
                         <div class="text">
-                            <h2>Sunway</h2>
-                            <p>태양광 발전사업을 추진하고 사업을 시작하는 사람들을 위한 서비스를 지원하는 기업, 썬웨이의 웹페이지입니다.
+                            <h2>Space stone</h2>
+                            <p>커뮤니티 웹에서 단기 이벤트로 진행하는 게임입니다. 유저들은 강화에 성공한 보석을 교환하여 보상을 획득합니다.
                             </p>
-                        </div>
+                    </div>
                     </div>
                     <div class="item">
                         <div class="img-box">
@@ -124,7 +124,7 @@
             <!---Marketing web design----->
             <div class="marketing" id="here_2">
                 <div class="title2">
-                    <h1>Marketing Web Design</h1>
+                    <h1>Marketing Design</h1>
                 </div>
                 <div class="market">
                     <div class="product">
@@ -132,24 +132,24 @@
                             <div class="area_none2">
                                 <a href="page/market_product1.html"><span>아리재홈 / 반디즈</span></a>
                                 <a href="page/market_product2.html"><span>아리재홈 / 에이라운지</span></a>
-                                <a href="page/market_product3.html"><span>유니클럽 마스카라</span></a>
+                                <a href="page/market_product3.html"><span>유니클럽 / 마스카라</span></a>
                             </div>
                         </div>
                         <div class="img_wrap">
                             <img src="img/marketing/market_img1.jpg">
-                            <strong>Shoping Product Page</strong>
+                            <strong>Product Page</strong>
                         </div>
                     </div>
 
                     <div class="sns">
                         <div class="hover_area2">
                             <div class="area_none2">
-                                <a href="page/market_sns.html"><span>닥터오플러스</span></a>
+                                <a href="page/market_Carselon.html"><span>카셀론</span></a>
                             </div>
                         </div>
                         <div class="img_wrap">
                             <img src="img/marketing/market_img2.png">
-                            <strong>SNS Image</strong>
+                            <strong>Online Platform</strong>
                         </div>
                     </div>
                 </div>
@@ -330,7 +330,7 @@
 
         <div class="footer">
             <p>
-                김미수 디자이너<br><span>Tell_010 - 9248 - 4806 &nbsp|&nbsp E-mail_psaiidfl_15@naver.com</span><br> 부산 해운대구 좌동 장산역 부근 거주
+                김미수 디자이너<br><span>Tell_010 - 4933 - 7803 &nbsp|&nbsp E-mail_psaiidfl_15@naver.com</span><br> 부산 해운대구 좌동 거주
             </p>
         </div>
 
