--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="illustration">
                 <div class="imgs_wrap">
                     <div class="illust_box">
-                        <span>새해복 많이 받으소!</span>
+                        <span>새해</span>
                         <a href="page/illust_1.html">
                             <img src="img/illust/illust_img1.jpg">
                         </a>
