--- a/Backup/index_230402.html
+++ b/Backup/index_230402.html
@@ -65,7 +65,7 @@
                         </div>
                         <div class="text">
                             <h2>Hot!issue</h2>
-                            <p>지역 뉴스 커뮤니티 앱 입니다.</p>
+                            <p>지루한 현대인의 삶 속에 신속 정확한 정보 공유와 소통을 위한 지역 뉴스 커뮤니티 앱입니다.</p>
                         </div>
                     </div>
                     <div class="item">
@@ -80,7 +80,7 @@
                         </div>
                         <div class="text">
                             <h2>Space stone</h2>
-                            <p>커뮤니티 웹에서 단기 이벤트로 진행하는 게임입니다. 유저들은 강화에 성공한 보석을 교환하여 보상을 획득합니다.
+                            <p>커뮤니티 웹에서 단기 이벤트로 진행하는 게임입니다. 강화에 성공한 보석을 교환하여 보상을 획득합니다.
                             </p>
                     </div>
                     </div>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="text">
                             <h2>Kamibot Pi</h2>
-                            <p>코딩교육 로봇 ‘카미봇’의 새로운 버전 ‘카미봇파이’의 출시를 위해 클라우드 펀딩인 킥스타터에서 홍보하는 프로모션 웹페이지입니다.
+                            <p>코딩 교육 로봇 ‘카미봇’의 새로운 버전 ‘카미봇파이’의 출시를 위해 클라우드 펀딩인 킥스타터에서 홍보하는 프로모션 웹페이지입니다.
                             </p>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="text">
                             <h2>Kamiblock 3.0</h2>
-                            <p>기존의 어린이 코딩 교육 프로그램 ‘스크래치’를 기반으로 (주)삼쩜일사의 코딩교육 로봇 ‘카미봇’에 연결하여 사용할 수 있는 앱으로 개발하는 UIUX 프로젝트입니다.
+                            <p>기존의 어린이 코딩 교육 프로그램 ‘스크래치’를 기반으로 (주)삼쩜일사의 코딩 교육 로봇 ‘카미봇’에 연결하여 사용할 수 있는 앱으로 개발하는 UIUX 프로젝트입니다.
                             </p>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
             <div class="illustration">
                 <div class="imgs_wrap">
                     <div class="illust_box">
-                        <span>새해복 많이 받으소!</span>
+                        <span>새해</span>
                         <a href="page/illust_1.html">
                             <img src="img/illust/illust_img1.jpg">
                         </a>
@@ -330,7 +330,7 @@
 
         <div class="footer">
             <p>
-                김미수 디자이너<br><span>Tell_010 - 4933 - 7803 &nbsp|&nbsp E-mail_psaiidfl_15@naver.com</span><br> 부산 해운대구 좌동 거주
+                <span>김미수 디자이너 &nbsp|&nbsp 010 - 4399 - 7803 &nbsp|&nbsp psaiidfl_15@naver.com</span><br> 부산광역시 해운대구 거주 (울산시 이전 예정)
             </p>
         </div>
 
