--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="sns">
                         <div class="hover_area2">
                             <div class="area_none2">
-                                <a href="page/market_Carselon.html"><span>카셀론</span></a>
+                                <a href="page/market_Carselon.html"><span>중고차 마켓 카셀론</span></a>
                             </div>
                         </div>
                         <div class="img_wrap">
