--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!--navigation-->
         <nav class="navbar" id="here">
             <ul class="navbar_menu">
-                <li>Portfolio</li>
+                <li style="color:#0075FF;">Portfolio</li>
                 <li><a href="page/aboutme.html">About me</a></li>
             </ul>
         </nav>
