--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         </a>
                     </div>
                     <div class="illust_box">
-                        <span>캐릭터</span>
+                        <span>생물 캐릭터</span>
                         <a href="page/illust_2.html">
                             <img src="img/illust/illust_img2.jpg">
                         </a>
@@ -292,13 +292,13 @@
                         </a>
                     </div>
                     <div class="illust_box">
-                        <span>몽환</span>
+                        <span>여름 이벤트</span>
                         <a href="page/illust_4.html">
                             <img src="img/illust/illust_img4.jpg">
                         </a>
                     </div>
                     <div class="illust_box">
-                        <span>타이포그래피</span>
+                        <span>음식과 소품 캐릭터</span>
                         <a href="page/illust_5.html">
                             <img src="img/illust/illust_img5.jpg">
                         </a>
@@ -310,7 +310,7 @@
                         </a>
                     </div>
                     <div class="illust_box">
-                        <span>고래</span>
+                        <span>몽환</span>
                         <a href="page/illust_7.html">
                             <img src="img/illust/illust_img7.jpg">
                         </a>
