--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
         <div class="footer">
             <p>
-                <span>김미수 디자이너 &nbsp|&nbsp 010 - 4399 - 7803 &nbsp|&nbsp psaiidfl_15@naver.com</span><br> 부산광역시 해운대구 거주 (울산시 이전 예정)
+                <span>김미수 디자이너 &nbsp|&nbsp 010 - 4399 - 7803 &nbsp|&nbsp psaiidfl_15@naver.com</span><br> 부산광역시 해운대구 거주
             </p>
         </div>
 
